# atomadic-forge

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  EVOLUTION.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  glama.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  smithery.yaml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/forge-action/: README.md  action.yml
.github/workflows/: ci.yml  customer-refactor.yml  forge-self-certify.yml  forge-studio-ci.yml  release.yml
cloudflare-workers/badge/: wrangler.toml
docs/: 01-getting-started.md  02-commands.md  03-tutorial.md  04-llm-loops.md  05-faq.md  AGENTS_GUIDE.md  AIR_GAPPED.md  CI_CD.md  CODEX_WALKTHROUGH.md  COMMANDS.md  FIRST_10_MINUTES.md  FORMALIZATION.md  LANDSCAPE.md  MARKET_POSITIONING.md  MULTI_REPO.md  README.md  RECEIPT.md  RELEASE_CHECKLIST.md  RELEASE_MESSAGING.md  ROADMAP.md  SHOWCASE.md  SIDECAR.md  STRIPE_SETUP_HANDOFF.md  STUDIO.md  WHY_NOW.md
docs/commands/: INDEX.md  chat.md  commandsmith.md  config.md  demo.md  emergent-then-synergy.md  emergent.md  evolve-then-iterate.md  evolve.md  feature-then-emergent.md  iterate.md  synergy-then-emergent.md  synergy.md
docs/compliance/: CMMC_AI_MAPPING.md  CS-1.md  EU_AI_ACT_ANNEX_IV.md  FDA_PCCP_MAPPING.md  SR_11-7_MAPPING.md
docs/policy_templates/: permissive.toml  regulated.toml  strict.toml
docs/tutorials/: 01-quickstart.md  02-your-first-package.md  03-the-five-tier-law.md  04-plug-in-llms.md  05-multi-repo-absorb.md  06-javascript-quickstart.md
forge-studio/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
forge-studio/src/: App.tsx  index.css  main.tsx
forge-studio/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
forge-studio/src-tauri/capabilities/: default.json
forge-studio/src-tauri/src/: lib.rs  main.rs
forge-studio/src/components/: AgentTopologyMap.tsx  ArchitectureGraph.tsx  ComplexityHeatmap.tsx  DebtCounter.tsx  ErrorBanner.tsx  Navigation.tsx  ProjectScanDashboard.tsx
forge-studio/src/lib/: mcp.ts  types.ts
forge-studio/src/store/: index.ts
forge-studio/tests/e2e/: smoke.spec.ts
forge-studio/tests/unit/: mcp.test.ts
forge-web/: .env.example  README.md  next.config.ts  package.json  tsconfig.json
forge-web/app/: ForgeApp.tsx  InstallPwaButton.tsx  globals.css  layout.tsx  page.tsx
forge-web/public/: manifest.webmanifest  sw.js
investor-site/: .gitignore  README.md  package-lock.json  package.json
investor-site/app/: globals.css  layout.tsx  page.tsx
investor-site/app/components/: CyberCard.tsx  EcosystemSection.tsx  Footer.tsx  Hero.tsx  InvestSection.tsx  MarketSection.tsx  Nav.tsx  ProblemSection.tsx  ProductsSection.tsx  ReceiptsSection.tsx  SolutionSection.tsx  StatCounter.tsx  TeamSection.tsx  TractionSection.tsx
scripts/: stripe_setup_products.mjs
src/absorbed/a0_qk_constants/: agentpolicy.py  counter_ok.js  load_manifest.py  sidecarfile.py  test_extension_ts_uses_stdio_transport.py
src/absorbed/a1_at_functions/: _always_clean_responder.py  _axes.py  _balance_braces.py  _build_typer_args.py  _certify_block.py  _check_added_imports_against_tier.py  _collect_top_level_names.py  _context_paths.py  _detect_package.py  _detect_pair.py  _emit.py  _ensure_log_dir.py  _file_imports_in_package.py  _handling_for.py  _harvest_python_file.py  _info.py  _is_cache.py  _list_tests.py  _notification.py  _now_utc_iso.py  _option_args.py  _r.py  _resolve_provider__alt.py  _result_to_dict.py  _scaffold_js_tier_tree.py  _score.py  _scout_line.py  _signatures_status.py  _slug.py  _test_openai.py  _write.py  actionablecard.tsx  activate.ts  agenttopologymap.tsx  app__alt.tsx  (+70 more)
src/atomadic_forge/: __init__.py  __main__.py
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/: README.md  pyproject.toml
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/src/mixed_pkg/: __init__.py
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/src/mixed_pkg/a0_qk_constants/: __init__.py
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/src/mixed_pkg/a1_at_functions/: __init__.py
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/tests/: conftest.py
src/atomadic_forge/a3_og_features/demo_packages/mixed_py_js/web/a4_sy_orchestration/: server.js
tests/: conftest.py  test_aaaa_nexus_client.py  test_agent_hire_protocol.py  test_agent_plan.py  test_agent_summary.py  test_badge_worker.py  test_body_extractor_repairs.py  test_card_renderer.py  test_certify_operational_axis.py  test_chat.py  test_classify_tier.py  test_cli_smoke.py  test_codex_5_complete.py  test_codex_6_enforce_polyglot.py  test_commandsmith.py  test_compiler_feedback.py  test_compliance_checker.py  test_config.py  test_copilots_copilot.py  test_cost_circuit_breaker.py  test_cs1_renderer.py  test_dedup_engine.py  test_demo.py  test_error_codes.py  test_error_hints.py  test_evolve_js.py  test_exported_api_check.py  test_forge_action.py  test_forge_auth_a1.py  test_forge_auth_a2.py  test_hierarchical_memory.py  test_ignore_and_docs.py  test_iterate_evolve.py  test_js_certify.py  test_js_parser.py  test_js_recon.py  test_ling_provider.py  test_local_signer.py  test_lsp_protocol.py  test_manifest_diff.py  (+22 more)
vscode-forge-extension/: README.md  package.json  tsconfig.json
(+179 files in other folders)
