[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomadic-forge"
version = "0.3.1"
description = "Atomadic Forge — absorb, enforce, emerge. Polyglot (Python + JavaScript/TypeScript) architecture guardian for AI-generated code."
readme = "README.md"
requires-python = ">=3.10"
license = "BUSL-1.1"
authors = [{ name = "Atomadic" }]
keywords = ["atomadic", "ass-ade", "monadic", "architecture", "forge",
            "code-quality", "ai", "agents", "javascript", "typescript",
            "polyglot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<9",
    "typer>=0.15,<1",
    "rich>=14,<15",
    # Lane D W8 — .forge sidecar parser (a1.sidecar_parser) and the
    # GitHub Action validator test surface both depend on PyYAML.
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "import-linter>=2.0,<3",
    "ruff>=0.4",
    "build>=1,<2",
    "twine>=5,<7",
    "cryptography>=42,<46",
]
signing = [
    "cryptography>=42,<46",
]

[project.scripts]
forge = "atomadic_forge.a4_sy_orchestration.cli:main"
atomadic-forge = "atomadic_forge.a4_sy_orchestration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["atomadic_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.importlinter]
root_package = "atomadic_forge"

[[tool.importlinter.contracts]]
name = "Atomadic Forge — Monadic tiers"
type = "layers"
layers = [
    "atomadic_forge.a4_sy_orchestration",
    "atomadic_forge.commands",
    "atomadic_forge.a3_og_features",
    "atomadic_forge.a2_mo_composites",
    "atomadic_forge.a1_at_functions",
    "atomadic_forge.a0_qk_constants",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".pytest_tmp*",
    ".tmp_cli_ux",
    ".atomadic-forge",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
