[package]
name = "forge-studio"
version = "0.1.0"
description = "Forge Studio Visual Sandbox"
authors = ["Atomadic <noreply@atomadic.tech>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "forge_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forge-studio"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true