[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixed-pkg"
version = "0.1.0"
description = "Atomadic Forge polyglot showcase — Python tier + JS tier under one root"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mixed_pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Explicitly leave addopts empty so the parent atomadic-forge's "-q"
# config doesn't bleed in and suppress the summary line our test runner
# parses.
addopts = ""
